# TCP-Chat

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: Test.yml  ci.yml  ci_tests.yml  create-binaries.yml  docs.yml  server-ci.yml
client/: .gitignore  LICENSE  Makefile  README.md  Taskfile.yml  Taskfile_darwin.yml  Taskfile_linux.yml  Taskfile_windows.yml  requirements.txt
client/TCPChatClient/: .env.template  __main__.py  app.py  requirements.txt  tcp.py
client/TCPChatClient/web-src/: package-lock.json  package.json
client/TCPChatClient/web-src/src/: App.vue  main.js  store.js
client/TCPChatClient/web-src/src/components/: ToastOverlay.vue
client/TCPChatClient/web-src/src/views/: Chat.vue  Home.vue  LoginPage.vue
client/docs/source/: api.rst  app.rst  conf.py  dev.rst  index.rst  messagesDB.rst  tcp.rst
client/src/: .gitignore  api.py  app.py  env.py.template  messagesDB.py  private_key.pem  public_key.pem  requirements.txt  security.py  tcp.py  users.py
client/src/web-src/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/web-src/src/components/: AddContact.vue  AllContacts.vue  Contact.vue  Conversation.vue  HamburgerMenu.vue  MessageBubble.vue  ToastOverlay.vue
client/src/web-src/src/services/: EventBus.js  fontawesome.js  router.js  store.js
client/src/web-src/src/views/: Chat.vue  Home.vue  LoginPage.vue  RegisterPage.vue
server/: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  server  users.db  zypper-dependecies.sh
server/src/: Dockerfile  Makefile  arg_parser.cpp  arg_parser.h  cache.cpp  cache.h  client.cpp  client.h  client_.cpp  client_.cxx  client_handler.cpp  client_handler.h  controller.cpp  controller.h  json.hpp  logger.h  main.cpp  server  server.cpp  server.h  user_database.cpp  user_database.h  user_db_handle.cpp  user_db_handle.h  users.db  wrappers.cpp  wrappers.h
server/src/controllers/: account_controller.cpp  account_controller.h  controller.cpp  controller.h
server/src/core/: cache.cpp  cache.h  client.cpp  client.h  client_handler.cpp  client_handler.h  controller.cpp  controller.h  icontroller.cpp  icontroller.h  socket.cpp  socket.h
server/src/core/database/: user.cpp  user.h  user_db_handle.cpp  user_db_handle.h
server/src/core/utils/: constants.h  crypto.cpp  crypto.h  globals.h
server/src/include/jaszyk/: flatmap.hpp  json.hpp
server/src/keys/: private.pem  public.pem
server/src/lib/: libssl.so.3
server/test/: CMakeLists.txt  account_controller_tests.cpp  friend_list_tests.cpp  register_test.cpp  rsa_tests  rsa_tests.cpp
